# anki-rpc

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
src/anki_rpc/: __init__.py  client.py  errors.py
tests/: conftest.py  test_client.py  test_integration.py
