[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anki-rpc"
version = "0.1.0"
description = "Typed Python client for the AnkiConnect HTTP API"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["src/anki_rpc"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
